Fixed spacing between language buttons and terms and conditions links on splash pages.

--- a/src/theme-gcwu-fegc/sass/includes/sp-pe.scss
+++ b/src/theme-gcwu-fegc/sass/includes/sp-pe.scss
@@ -97,7 +97,7 @@ h2 {
 	list-style-type: none;
 	display: inline-block;
 	margin: 0;
-	padding-top: 1px;
+	padding-top: 4px;
 	padding-left: 0;
 	line-height: normal;
 	li {
